force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <description>Records of the volunteers that work for us.</description>
    <label>Volunteer</label>
    <nameField>
        <displayFormat>VN-{0000}</displayFormat>
        <label>Volunteer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>