force-app/main/default/objects/Volunteer__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>First and last name of Volunteer</description>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>