force-app/main/default/objects/Volunteer__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Can be either mobile or home phone</inlineHelpText>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>