force-app/main/default/objects/Volunteer__c/fields/possiblejoin__c.field-meta.xml
<CustomField>
    <fullName>possiblejoin__c</fullName>
    <label>possiblejoin</label>
    <type>DateTime</type>
</CustomField>