force-app/main/default/objects/Volunteer__c/fields/Requested_Status__c.field-meta.xml
<CustomField>
    <fullName>Requested_Status__c</fullName>
    <description>The requested Status of the volunteer</description>
    <label>Requested Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
                <default>true</default>
                <label>Full-Time</label>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>